--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-dialog": "^1.0.5",
     "axios": "^1.6.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.4",
